--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,8 +27,6 @@
           </div>
 
           <nav>
-            <a href="{{ site.baseurl }}/publication">Publication</a>
-            <a href="{{ site.baseurl }}/about">About</a>
           </nav>
         </header>
       </div>
@@ -36,6 +34,7 @@
 
     <div id="main" role="main" class="container">
       {{ content }}
+      asdfasdf
     </div>
 
     <div class="wrapper-footer">
