--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,14 @@
 
     <div id="main" role="main" class="container">
       {{ content }}
-      asdfasdf
+      Introduce
+        asdf
+      Research Interest
+        asdf
+      Publications
+        asdf
+      Contect
+        asdf
     </div>
 
     <div class="wrapper-footer">
