--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
 
     <div id="main" role="main" class="container">
       {{ content }}
-      Introduce
+      <h1>Introduce</h1>
         asdf
       Research Interest
         asdf
