--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,14 +34,16 @@
 
     <div id="main" role="main" class="container">
       {{ content }}
-      <h1>Introduce</h1>
-        asdf
-      Research Interest
-        asdf
-      Publications
-        asdf
-      Contect
-        asdf
+      <h1>Introduce</h1><br>
+        asdf<br>
+      <h1>Research Interest</h1><br>
+        asdf<br>
+      <h1>Publications</h1><br>
+        &middot;GuardiaNN: Fast and Secure Inference in TrustZone Using Embedded SRAM and Cryptographic Hardware<br>
+        <br>
+        &middot;Dataflow Mirroring: Architectural Support for Highly Efficient Fine-Grained Spatial Multitasking on Systolic-Array NPUs<br>
+      <h1>Contect</h1><br>
+        jinwoo1029@yonsei.ac.kr<br>
     </div>
 
     <div class="wrapper-footer">
