--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,28 +34,30 @@
 
     <div id="main" role="main" class="container">
       {{ content }}
-      <h1>Introduce</h1><br>
-        asdf<br>
-      <h1>Research Interest</h1><br>
-        asdf<br>
-      <h1>Publications</h1><br>
-        <ul>
-          <li>
-            <b>GuardiaNN: Fast and Secure Inference in TrustZone Using Embedded SRAM and Cryptographic Hardware</b><br>
-            Jinwoo Choi<small><sup>1</sup></small>, Jaeyeon Kim<small><sup>1</sup></small>, Chaemin Lim<small><sup>1</sup></small>, Suhyun Lee, Jinho Lee, Dokyung Song, and Youngsok Kim<br>
-            <i>23rd ACM/IFIP International Middleware Conference (<b>Middleware</b>)</i>, Nov. 2022 (to appear)<br>
-            <small><sup>1</sup>Co-first authors</small><br>
-          </li>
-          <br>
-          <li>
-            <b><a href="https://doi.org/10.1109/DAC18074.2021.9586312">Dataflow Mirroring: Architectural Support for Highly Efficient Fine-Grained Spatial Multitasking on Systolic-Array NPUs</a></b><br>
-            Jounghoo Lee<small><sup>1</sup></small>, Jinwoo Choi<small><sup>1</sup></small>, Jaeyeon Kim, Jinho Lee, and Youngsok Kim<br>
-            <i>58th ACM/IEEE Design Automation Conference (<b>DAC</b>)</i>, Dec. 2021<br>
-            <small><sup>1</sup>Co-first authors</small><br>
-          </li>
-        </ul>
-      <h1>Contect</h1><br>
-        jinwoo1029@yonsei.ac.kr<br>
+      <div id="content">
+        <h1>Introduce</h1><br>
+          asdf<br>
+        <h1>Research Interest</h1><br>
+          asdf<br>
+        <h1>Publications</h1><br>
+          <!-- <ul> -->
+            <li>
+              <b>GuardiaNN: Fast and Secure Inference in TrustZone Using Embedded SRAM and Cryptographic Hardware</b><br>
+              Jinwoo Choi<small><sup>1</sup></small>, Jaeyeon Kim<small><sup>1</sup></small>, Chaemin Lim<small><sup>1</sup></small>, Suhyun Lee, Jinho Lee, Dokyung Song, and Youngsok Kim<br>
+              <i>23rd ACM/IFIP International Middleware Conference (<b>Middleware</b>)</i>, Nov. 2022 (to appear)<br>
+              <small><sup>1</sup>Co-first authors</small><br>
+            </li>
+            <br>
+            <li>
+              <b><a href="https://doi.org/10.1109/DAC18074.2021.9586312">Dataflow Mirroring: Architectural Support for Highly Efficient Fine-Grained Spatial Multitasking on Systolic-Array NPUs</a></b><br>
+              Jounghoo Lee<small><sup>1</sup></small>, Jinwoo Choi<small><sup>1</sup></small>, Jaeyeon Kim, Jinho Lee, and Youngsok Kim<br>
+              <i>58th ACM/IEEE Design Automation Conference (<b>DAC</b>)</i>, Dec. 2021<br>
+              <small><sup>1</sup>Co-first authors</small><br>
+            </li>
+          <!-- </ul> -->
+        <h1>Contect</h1><br>
+          jinwoo1029@yonsei.ac.kr<br>
+      </div>
     </div>
 
     <div class="wrapper-footer">
