--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,14 +33,13 @@
     </div>
 
     <div id="main" role="main" class="container">
-      {{ content }}
-      <div id="content">
+      <!-- <div id="content"> -->
         <h1>Introduce</h1><br>
           asdf<br>
         <h1>Research Interest</h1><br>
           asdf<br>
         <h1>Publications</h1><br>
-          <!-- <ul> -->
+          <ul>
             <li>
               <b>GuardiaNN: Fast and Secure Inference in TrustZone Using Embedded SRAM and Cryptographic Hardware</b><br>
               Jinwoo Choi<small><sup>1</sup></small>, Jaeyeon Kim<small><sup>1</sup></small>, Chaemin Lim<small><sup>1</sup></small>, Suhyun Lee, Jinho Lee, Dokyung Song, and Youngsok Kim<br>
@@ -54,10 +53,10 @@
               <i>58th ACM/IEEE Design Automation Conference (<b>DAC</b>)</i>, Dec. 2021<br>
               <small><sup>1</sup>Co-first authors</small><br>
             </li>
-          <!-- </ul> -->
+          </ul>
         <h1>Contect</h1><br>
           jinwoo1029@yonsei.ac.kr<br>
-      </div>
+      <!-- </div> -->
     </div>
 
     <div class="wrapper-footer">
