--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,7 +37,10 @@
         <h1>Introduce</h1><br>
           asdf<br>
         <h1>Research Interest</h1><br>
-          asdf<br>
+          <li>Computer system / architecture</li>
+          <li>Mobile / Embedded System</li>
+          <li>Scheduling algorithm</li>
+          <br>
         <h1>Publications</h1><br>
           <ul>
             <li>
@@ -51,7 +54,7 @@
               <b><a href="https://doi.org/10.1109/DAC18074.2021.9586312">Dataflow Mirroring: Architectural Support for Highly Efficient Fine-Grained Spatial Multitasking on Systolic-Array NPUs</a></b><br>
               Jounghoo Lee<small><sup>1</sup></small>, Jinwoo Choi<small><sup>1</sup></small>, Jaeyeon Kim, Jinho Lee, and Youngsok Kim<br>
               <i>58th ACM/IEEE Design Automation Conference (<b>DAC</b>)</i>, Dec. 2021<br>
-              <small><sup>1</sup>Co-first authors</small><br>
+              <sup>1</sup>Co-first author<br>
             </li>
           </ul>
         <h1>Contect</h1><br>
