--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,12 +36,13 @@
       <!-- <div id="content"> -->
         <h1>Introduce</h1><br>
           asdf<br>
-        <h1>Research Interest</h1><br>
+        <h1>Research Interest</h1>
           <li>Computer system / architecture</li>
           <li>Mobile / Embedded System</li>
           <li>Scheduling algorithm</li>
           <br>
-        <h1>Publications</h1><br>
+
+        <h1>Publications</h1>
           <ul>
             <li>
               <b>GuardiaNN: Fast and Secure Inference in TrustZone Using Embedded SRAM and Cryptographic Hardware</b><br>
@@ -57,7 +58,8 @@
               <sup>1</sup>Co-first author<br>
             </li>
           </ul>
-        <h1>Contect</h1><br>
+          
+        <h1>Contect</h1>
           jinwoo1029@yonsei.ac.kr<br>
       <!-- </div> -->
     </div>
