--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,10 +37,12 @@
         <h1>Introduce</h1><br>
           asdf<br>
         <h1>Research Interest</h1>
-          <li>Computer system / architecture</li>
-          <li>Mobile / Embedded System</li>
-          <li>Scheduling algorithm</li>
-          <br>
+          <ul>
+            <li>Computer System / Architecture</li>
+            <li>Mobile / Embedded System</li>
+            <li>Operating System</li>
+            <li>Scheduling</li>
+          </ul>
 
         <h1>Publications</h1>
           <ul>
@@ -55,10 +57,10 @@
               <b><a href="https://doi.org/10.1109/DAC18074.2021.9586312">Dataflow Mirroring: Architectural Support for Highly Efficient Fine-Grained Spatial Multitasking on Systolic-Array NPUs</a></b><br>
               Jounghoo Lee<small><sup>1</sup></small>, Jinwoo Choi<small><sup>1</sup></small>, Jaeyeon Kim, Jinho Lee, and Youngsok Kim<br>
               <i>58th ACM/IEEE Design Automation Conference (<b>DAC</b>)</i>, Dec. 2021<br>
-              <sup>1</sup>Co-first author<br>
+              <small><sup>1</sup>Co-first authors</small><br>
             </li>
           </ul>
-          
+
         <h1>Contect</h1>
           jinwoo1029@yonsei.ac.kr<br>
       <!-- </div> -->
