--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,8 +35,12 @@
     <div id="main" role="main" class="container">
       <!-- <div id="content"> -->
         <h1>Introduce</h1><br>
-          asdf<br>
-        <h1>Research Interest</h1>
+          <ul>
+            <li><a href="https://hpcp.yonsei.ac.kr">Ph.D Student in HPCPLab@Yonsei University</a></li>
+            <li><a href="https://hpcp.yonsei.ac.kr/~youngsok/">Advisor: Youngsok Kim</a></li>
+          </ul>
+
+        <h1>Research Interests</h1>
           <ul>
             <li>Computer System / Architecture</li>
             <li>Mobile / Embedded System</li>
@@ -61,7 +65,7 @@
             </li>
           </ul>
 
-        <h1>Contect</h1>
+        <h1>Contact</h1>
           jinwoo1029@yonsei.ac.kr<br>
       <!-- </div> -->
     </div>
