--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
 
     <div id="main" role="main" class="container">
       <!-- <div id="content"> -->
-        <h1>Introduce</h1><br>
+        <h1>Introduce</h1>
           <ul>
             <li><a href="https://hpcp.yonsei.ac.kr">Ph.D Student in HPCPLab@Yonsei University</a></li>
             <li><a href="https://hpcp.yonsei.ac.kr/~youngsok/">Advisor: Youngsok Kim</a></li>
@@ -55,6 +55,7 @@
               Jinwoo Choi<small><sup>1</sup></small>, Jaeyeon Kim<small><sup>1</sup></small>, Chaemin Lim<small><sup>1</sup></small>, Suhyun Lee, Jinho Lee, Dokyung Song, and Youngsok Kim<br>
               <i>23rd ACM/IFIP International Middleware Conference (<b>Middleware</b>)</i>, Nov. 2022 (to appear)<br>
               <small><sup>1</sup>Co-first authors</small><br>
+              <span class="label label-sys">System SW</span> <span class="label label-mobile">Mobile</span> <span class="label label-sec">Security</span> <span class="label label-ai">AI</span>
             </li>
             <br>
             <li>
