--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,8 +36,8 @@
       <!-- <div id="content"> -->
         <h1>Introduce</h1>
           <ul>
-            <li><a href="https://hpcp.yonsei.ac.kr">Ph.D Student in HPCPLab@Yonsei University</a></li>
-            <li><a href="https://hpcp.yonsei.ac.kr/~youngsok/">Advisor: Youngsok Kim</a></li>
+            <li>Ph.D Student at <a href="https://hpcp.yonsei.ac.kr">HPCPLab@Yonsei University</a></li>
+            <li>Advisor:<a href="https://hpcp.yonsei.ac.kr/~youngsok/"> Prof. Youngsok Kim</a></li>
           </ul>
 
         <h1>Research Interests</h1>
