--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,6 @@
     <div class="wrapper-masthead">
       <div class="container">
         <header class="masthead clearfix">
-          <a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.avatar }}" /></a>
 
           <div class="site-info">
             <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
@@ -34,6 +33,7 @@
 
     <div id="main" role="main" class="container">
       <!-- <div id="content"> -->
+        <img src="../images/404.jpg" width=200px>
         <h1>Introduce</h1>
           <ul>
             <li>Ph.D Student at <a href="https://hpcp.yonsei.ac.kr">HPCPLab@Yonsei University</a></li>
@@ -55,7 +55,6 @@
               Jinwoo Choi<small><sup>1</sup></small>, Jaeyeon Kim<small><sup>1</sup></small>, Chaemin Lim<small><sup>1</sup></small>, Suhyun Lee, Jinho Lee, Dokyung Song, and Youngsok Kim<br>
               <i>23rd ACM/IFIP International Middleware Conference (<b>Middleware</b>)</i>, Nov. 2022 (to appear)<br>
               <small><sup>1</sup>Co-first authors</small><br>
-              <span class="label label-sys">System SW</span> <span class="label label-mobile">Mobile</span> <span class="label label-sec">Security</span> <span class="label label-ai">AI</span>
             </li>
             <br>
             <li>
