--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,6 @@
 
     <div id="main" role="main" class="container">
       <!-- <div id="content"> -->
-        <img src="../images/404.jpg" width=200px>
         <h1>Introduce</h1>
           <ul>
             <li>Ph.D Student at <a href="https://hpcp.yonsei.ac.kr">HPCPLab@Yonsei University</a></li>
@@ -52,7 +51,7 @@
           <ul>
             <li>
               <b>GuardiaNN: Fast and Secure Inference in TrustZone Using Embedded SRAM and Cryptographic Hardware</b><br>
-              Jinwoo Choi<small><sup>1</sup></small>, Jaeyeon Kim<small><sup>1</sup></small>, Chaemin Lim<small><sup>1</sup></small>, Suhyun Lee, Jinho Lee, Dokyung Song, and Youngsok Kim<br>
+              Jinwoo Choi<sup>1</sup>, Jaeyeon Kim<sup>1</sup>, Chaemin Lim<small><sup>1</sup></small>, Suhyun Lee, Jinho Lee, Dokyung Song, and Youngsok Kim<br>
               <i>23rd ACM/IFIP International Middleware Conference (<b>Middleware</b>)</i>, Nov. 2022 (to appear)<br>
               <small><sup>1</sup>Co-first authors</small><br>
             </li>
