--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
       </div>
     </div>
 
-    <div id="main" role="main" class="container">
+    <div>
       <!-- <div id="content"> -->
         <h1>Introduce</h1>
           <ul>
