--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,24 +10,18 @@
     <![endif]-->
 
     <link rel="stylesheet" type="text/css" href="../style.css" />
-    <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
+    <!-- <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" /> -->
 
     <!-- Created with Jekyll Now - http://github.com/barryclark/jekyll-now -->
   </head>
 
   <body>
-    <div class="wrapper-masthead">
-      <div class="container">
-        <header class="masthead clearfix">
-
-          <div class="site-info">
-            <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
-            <p class="site-description">{{ site.description }}</p>
+    <div>
+      <div>
+          <div>
+            <h1>Jinwoo Choi</h1>
+            <p>HPCPLab@Yonsei University</p>
           </div>
-
-          <nav>
-          </nav>
-        </header>
       </div>
     </div>
 
