--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,29 +3,28 @@
   <head>
     <title>{% if page.title %}{{ page.title }} – {% endif %}{{ site.name }} – {{ site.description }}</title>
 
-    {% include meta.html %}
-
     <!--[if lt IE 9]>
       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
     <link rel="stylesheet" type="text/css" href="../style.css" />
-    <!-- <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" /> -->
 
     <!-- Created with Jekyll Now - http://github.com/barryclark/jekyll-now -->
   </head>
 
   <body>
-    <div>
+    <div class="container">
       <div>
           <div>
             <h1>Jinwoo Choi</h1>
-            <p>HPCPLab@Yonsei University</p>
+            <h4>HPCPLab@Yonsei University</h4>
           </div>
       </div>
     </div>
 
-    <div>
+    <hr>
+
+    <div class="container">
       <!-- <div id="content"> -->
         <h1>Introduce</h1>
           <ul>
@@ -63,14 +62,5 @@
       <!-- </div> -->
     </div>
 
-    <div class="wrapper-footer">
-      <div class="container">
-        <footer class="footer">
-          {% include svg-icons.html %}
-        </footer>
-      </div>
-    </div>
-
-    {% include analytics.html %}
   </body>
 </html>
