--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,6 +31,7 @@
             <li>Ph.D Student at <a href="https://hpcp.yonsei.ac.kr">HPCPLab@Yonsei University</a></li>
             <li>Advisor:<a href="https://hpcp.yonsei.ac.kr/~youngsok/"> Prof. Youngsok Kim</a></li>
           </ul>
+        <br>
 
         <h1>Research Interests</h1>
           <ul>
@@ -39,12 +40,13 @@
             <li>Operating System</li>
             <li>Scheduling</li>
           </ul>
+        <br>
 
         <h1>Publications</h1>
           <ul>
             <li>
               <b>GuardiaNN: Fast and Secure Inference in TrustZone Using Embedded SRAM and Cryptographic Hardware</b><br>
-              Jinwoo Choi<sup>1</sup>, Jaeyeon Kim<sup>1</sup>, Chaemin Lim<small><sup>1</sup></small>, Suhyun Lee, Jinho Lee, Dokyung Song, and Youngsok Kim<br>
+              Jinwoo Choi<small><sup>1</sup></small>, Jaeyeon Kim<small><sup>1</sup></small>, Chaemin Lim<small><sup>1</sup></small>, Suhyun Lee, Jinho Lee, Dokyung Song, and Youngsok Kim<br>
               <i>23rd ACM/IFIP International Middleware Conference (<b>Middleware</b>)</i>, Nov. 2022 (to appear)<br>
               <small><sup>1</sup>Co-first authors</small><br>
             </li>
@@ -56,9 +58,14 @@
               <small><sup>1</sup>Co-first authors</small><br>
             </li>
           </ul>
+        <br>
 
         <h1>Contact</h1>
-          jinwoo1029@yonsei.ac.kr<br>
+        <ul>
+          <li>
+            Email: <a href="mailto:jinwoo1029@yonsei.ac.kr">jinwoo1029@yonsei.ac.kr</a><br>
+          </li>
+        </ul>
       <!-- </div> -->
     </div>
 
