--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,6 @@
             <li>Ph.D Student at <a href="https://hpcp.yonsei.ac.kr">HPCPLab@Yonsei University</a></li>
             <li>Advisor:<a href="https://hpcp.yonsei.ac.kr/~youngsok/"> Prof. Youngsok Kim</a></li>
           </ul>
-        <br>
 
         <h1>Research Interests</h1>
           <ul>
@@ -40,7 +39,6 @@
             <li>Operating System</li>
             <li>Scheduling</li>
           </ul>
-        <br>
 
         <h1>Publications</h1>
           <ul>
@@ -49,6 +47,7 @@
               Jinwoo Choi<small><sup>1</sup></small>, Jaeyeon Kim<small><sup>1</sup></small>, Chaemin Lim<small><sup>1</sup></small>, Suhyun Lee, Jinho Lee, Dokyung Song, and Youngsok Kim<br>
               <i>23rd ACM/IFIP International Middleware Conference (<b>Middleware</b>)</i>, Nov. 2022 (to appear)<br>
               <small><sup>1</sup>Co-first authors</small><br>
+              <span class="label label-sys">System SW</span> <span class="label label-mobile">Mobile</span> <span class="label label-sec">Security</span> <span class="label label-ai">AI</span>
             </li>
             <br>
             <li>
@@ -58,7 +57,6 @@
               <small><sup>1</sup>Co-first authors</small><br>
             </li>
           </ul>
-        <br>
 
         <h1>Contact</h1>
         <ul>
