--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <link rel="stylesheet" type="text/css" href="../style.css" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
 
     <!-- Created with Jekyll Now - http://github.com/barryclark/jekyll-now -->
   </head>
@@ -55,6 +55,8 @@
               Jounghoo Lee<small><sup>1</sup></small>, Jinwoo Choi<small><sup>1</sup></small>, Jaeyeon Kim, Jinho Lee, and Youngsok Kim<br>
               <i>58th ACM/IEEE Design Automation Conference (<b>DAC</b>)</i>, Dec. 2021<br>
               <small><sup>1</sup>Co-first authors</small><br>
+              <span class="label label-arch">Architecture</span>
+              <span class="label label-ai">AI</span>
             </li>
           </ul>
 
