--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,26 @@
     <![endif]-->
 
     <link rel="stylesheet" type="text/css" href="style.css" />
+    <style>
+    
+      .container {
+        margin: 0 auto;
+        max-width: 800px;
+        padding: 0 0px;
+        width: 100%;
+      }
 
+      h1 {
+        font-size: 30px;
+        line-height: 1;
+      }
+
+      h4 {
+        font-size: 18px;
+        line-height: 1;
+        color: rgb(153, 153, 153);
+      }
+    </style>
     <!-- Created with Jekyll Now - http://github.com/barryclark/jekyll-now -->
   </head>
 
