--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,6 +27,29 @@
         line-height: 1;
         color: rgb(153, 153, 153);
       }
+
+      span.label {
+        display: inline-block;
+        vertical-align: middle;
+        font-size: 80%;
+        font-weight: bold;
+        line-height: 1;
+        color: #fff;
+        text-align: center;
+        white-space: nowrap;
+        border-radius: .25em;
+        padding: 5px 3px 2px;
+      }
+      span.label-arch { background-color: #4CAF50; }
+      span.label-sys { background-color: #2196F3; }
+      span.label-sec { background-color: #F44336; }
+      span.label-ai { background-color: #FF9800; }
+      span.label-neuro { background-color: #008080; }
+      span.label-gpu { background-color: #191970; }
+      span.label-fpga { background-color: #B8860B; }
+      span.label-modeling { background-color: #708090; }
+      span.label-mobile { background-color: #BA55D3; }
+
     </style>
     <!-- Created with Jekyll Now - http://github.com/barryclark/jekyll-now -->
   </head>
@@ -67,6 +90,8 @@
               <i>23rd ACM/IFIP International Middleware Conference (<b>Middleware</b>)</i>, Nov. 2022 (to appear)<br>
               <small><sup>1</sup>Co-first authors</small><br>
               SystemSW / Mobile / Security / AI
+              <span class="label label-sys">System SW</span> <span class="label label-mobile">Mobile</span> <span class="label label-sec">Security</span> <span class="label label-ai">AI</span>
+ 
             </li>
             <br>
             <li>
@@ -75,6 +100,8 @@
               <i>58th ACM/IEEE Design Automation Conference (<b>DAC</b>)</i>, Dec. 2021<br>
               <small><sup>1</sup>Co-first authors</small><br>
               Architecture / AI
+              <span class="label label-arch">Architecture</span>
+              <span class="label label-ai">AI</span>
             </li>
           </ul>
 
