--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -95,7 +95,7 @@
             <br>
             <li>
               <b><a href="https://doi.org/10.1109/DAC18074.2021.9586312">Dataflow Mirroring: Architectural Support for Highly Efficient Fine-Grained Spatial Multitasking on Systolic-Array NPUs</a></b><br>
-              Jounghoo Lee<small><sup>1</sup></small>, Jinwoo Choi<small><sup>1</sup></small>, Jaeyeon Kim, Jinho Lee, and Youngsok Kim<br>
+              Jinwoo Choi<small><sup>1</sup></small>, Jounghoo Lee<small><sup>1</sup></small>, Jaeyeon Kim, Jinho Lee, and Youngsok Kim<br>
               <i>58th ACM/IEEE Design Automation Conference (<b>DAC</b>)</i>, Dec. 2021<br>
               <small><sup>1</sup>Co-first authors</small><br>
               <span class="label label-arch">Architecture</span>
