--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -71,23 +71,23 @@
         <h1>Introduce</h1>
           <ul>
             <li>Ph.D Student at <a href="https://hpcp.yonsei.ac.kr">HPCP Lab @ Yonsei University</a></li>
-            <li>Advisor:<a href="https://hpcp.yonsei.ac.kr/~youngsok/"> Prof. Youngsok Kim</a></li>
+            <li>Advisor: <a href="https://hpcp.yonsei.ac.kr/~youngsok/">Prof. Youngsok Kim</a></li>
           </ul>
 
         <h1>Research Interests</h1>
           <ul>
             <li>Computer System / Architecture</li>
             <li>Mobile / Embedded System</li>
-            <li>Operating System</li>
             <li>Scheduling</li>
+            <li>Operating System</li>
           </ul>
 
         <h1>Publications</h1>
           <ul>
             <li>
-              <b>GuardiaNN: Fast and Secure On-Device Inference in TrustZone Using Embedded SRAM and Cryptographic Hardware</b><br>
+              <b><a href="https://dl.acm.org/doi/10.1145/3528535.3531513">GuardiaNN: Fast and Secure On-Device Inference in TrustZone Using Embedded SRAM and Cryptographic Hardware</a></b><br>
               Jinwoo Choi<small><sup>1</sup></small>, Jaeyeon Kim<small><sup>1</sup></small>, Chaemin Lim<small><sup>1</sup></small>, Suhyun Lee, Jinho Lee, Dokyung Song, and Youngsok Kim<br>
-              <i>23rd ACM/IFIP International Middleware Conference (<b>Middleware</b>)</i>, Nov. 2022 (to appear)<br>
+              <i>23rd ACM/IFIP International Middleware Conference (<b>Middleware</b>)</i>, Nov. 2022<br>
               <small><sup>1</sup>Co-first authors</small><br>
               <span class="label label-sys">System SW</span> <span class="label label-mobile">Mobile</span> <span class="label label-sec">Security</span> <span class="label label-ai">AI</span>
  
