add sigmod paper
fix minor

fix minor

fix minor

fix minor

fix minor

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -85,8 +85,15 @@
         <h1>Publications</h1>
           <ul>
             <li>
+              <b>Design and Analysis of a Processing-in-DIMM Join Algorithm: A Case Study with UPMEM DIMMs</b><br>
+              Chaemin Lim, Suhyun Lee, <b>Jinwoo Choi</b>, Jounghoo Lee, Seongyeon Park, Hanjun Kim, Jinho Lee, and Youngsok Kim<br>
+              <i>2023 ACM SIGMOD International Conference on Management of Data (<b>SIGMOD</b>), June 2023 (to appear)</i> <br>
+              <span class="label label-sys">System SW</span> <span class="label label-database">Database</span> <span class="label label-pim">PIM</span>
+ 
+            </li>
+            <li>
               <b><a href="https://dl.acm.org/doi/10.1145/3528535.3531513">GuardiaNN: Fast and Secure On-Device Inference in TrustZone Using Embedded SRAM and Cryptographic Hardware</a></b><br>
-              Jinwoo Choi<small><sup>1</sup></small>, Jaeyeon Kim<small><sup>1</sup></small>, Chaemin Lim<small><sup>1</sup></small>, Suhyun Lee, Jinho Lee, Dokyung Song, and Youngsok Kim<br>
+              <b>Jinwoo Choi<small><sup>1</sup></small></b>, Jaeyeon Kim<small><sup>1</sup></small>, Chaemin Lim<small><sup>1</sup></small>, Suhyun Lee, Jinho Lee, Dokyung Song, and Youngsok Kim<br>
               <i>23rd ACM/IFIP International Middleware Conference (<b>Middleware</b>)</i>, Nov. 2022<br>
               <small><sup>1</sup>Co-first authors</small><br>
               <span class="label label-sys">System SW</span> <span class="label label-mobile">Mobile</span> <span class="label label-sec">Security</span> <span class="label label-ai">AI</span>
@@ -95,7 +102,7 @@
             <br>
             <li>
               <b><a href="https://doi.org/10.1109/DAC18074.2021.9586312">Dataflow Mirroring: Architectural Support for Highly Efficient Fine-Grained Spatial Multitasking on Systolic-Array NPUs</a></b><br>
-              Jinwoo Choi<small><sup>1</sup></small>, Jounghoo Lee<small><sup>1</sup></small>, Jaeyeon Kim, Jinho Lee, and Youngsok Kim<br>
+              Jounghoo Lee<small><sup>1</sup></small>, <b>Jinwoo Choi<small><sup>1</sup></small></b>, Jaeyeon Kim, Jinho Lee, and Youngsok Kim<br>
               <i>58th ACM/IEEE Design Automation Conference (<b>DAC</b>)</i>, Dec. 2021<br>
               <small><sup>1</sup>Co-first authors</small><br>
               <span class="label label-arch">Architecture</span>
