--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -88,7 +88,7 @@
               <b>Design and Analysis of a Processing-in-DIMM Join Algorithm: A Case Study with UPMEM DIMMs</b><br>
               Chaemin Lim, Suhyun Lee, Jinwoo Choi, Jounghoo Lee, Seongyeon Park, Hanjun Kim, Jinho Lee, and Youngsok Kim<br>
               <i>2023 ACM SIGMOD International Conference on Management of Data (<b>SIGMOD</b>b>), June 2023 (to appear)</i> <br>
-              <span class="label label-sys">System SW</span> <span class="label label-database">Database</span> <span class="label label-sec">PIM</span> <span class="label label-pim">AI</span>
+              <span class="label label-sys">System SW</span> <span class="label label-database">Database</span> <span class="label label-pim">PIM</span>
  
             </li>
             <li>
