--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -87,7 +87,7 @@
             <li>
               <b>Design and Analysis of a Processing-in-DIMM Join Algorithm: A Case Study with UPMEM DIMMs</b><br>
               Chaemin Lim, Suhyun Lee, <b>Jinwoo Choi</b>, Jounghoo Lee, Seongyeon Park, Hanjun Kim, Jinho Lee, and Youngsok Kim<br>
-              <i>2023 ACM SIGMOD International Conference on Management of Data (<b>SIGMOD</b>b>), June 2023 (to appear)</i> <br>
+              <i>2023 ACM SIGMOD International Conference on Management of Data (<b>SIGMOD</b>), June 2023 (to appear)</i> <br>
               <span class="label label-sys">System SW</span> <span class="label label-database">Database</span> <span class="label label-pim">PIM</span>
  
             </li>
