--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,6 +49,9 @@
       span.label-fpga { background-color: #B8860B; }
       span.label-modeling { background-color: #708090; }
       span.label-mobile { background-color: #BA55D3; }
+      span.label-database { background-color: #4B0150; }
+      span.label-pim { background-color: #FF6700; }
+
 
     </style>
     <!-- Created with Jekyll Now - http://github.com/barryclark/jekyll-now -->
