--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -88,9 +88,9 @@
         <h1>Publications</h1>
           <ul>
             <li>
-              <b>Design and Analysis of a Processing-in-DIMM Join Algorithm: A Case Study with UPMEM DIMMs</b><br>
+              <b><a href="https://doi.org/10.1145/3589258">Design and Analysis of a Processing-in-DIMM Join Algorithm: A Case Study with UPMEM DIMMs</a>a></b><br>
               Chaemin Lim, Suhyun Lee, <b>Jinwoo Choi</b>, Jounghoo Lee, Seongyeon Park, Hanjun Kim, Jinho Lee, and Youngsok Kim<br>
-              <i>2023 ACM SIGMOD International Conference on Management of Data (<b>SIGMOD</b>), June 2023 (to appear)</i> <br>
+              <i>2023 ACM SIGMOD International Conference on Management of Data (<b>SIGMOD</b>), June 2023</i> <br>
               <span class="label label-sys">System SW</span> <span class="label label-database">Database</span> <span class="label label-pim">PIM</span>
             </li>
             <br>
