--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -91,7 +91,7 @@
               <b>Enabling Fine-Grained Spatial Multitasking on Systolic-Array NPUs Using Dataflow Mirroring</b><br>
               <b>Jinwoo Choi</b>, Yeonan Ha, Jounghoo Lee, Sangsu Lee, Jinho Lee, Hanhwi Jang, and Youngsok Kim<br>
               <i>IEEE Transactions on Computers (<b>TC</b>), 2023 (to appear)</i> <br>
-              <span class="label label-arch">Architecture</span> <span class="label ai">AI</span> <span class="label label-modeling">Modeling</span>
+              <span class="label label-arch">Architecture</span> <span class="label label-ai">AI</span> <span class="label label-modeling">Modeling</span>
             </li>
             <br>
             <li>
