--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -88,7 +88,7 @@
         <h1>Publications</h1>
           <ul>
             <li>
-              <b>Enabling Fine-Grained Spatial Multitasking on Systolic-Array NPUs Using Dataflow Mirroring</b><br>
+              <b><a href="https://doi.org/10.1109/TC.2023.3299030">Enabling Fine-Grained Spatial Multitasking on Systolic-Array NPUs Using Dataflow Mirroring</a></b><br>
               <b>Jinwoo Choi</b>, Yeonan Ha, Jounghoo Lee, Sangsu Lee, Jinho Lee, Hanhwi Jang, and Youngsok Kim<br>
               <i>IEEE Transactions on Computers (<b>TC</b>), 2023 (to appear)</i> <br>
               <span class="label label-arch">Architecture</span> <span class="label label-ai">AI</span> <span class="label label-modeling">Modeling</span>
