[Paper accept] FCCM'24

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -88,6 +88,14 @@
         <h1>Publications</h1>
           <ul>
             <li>
+              <b>MPC-Wrapper: Fully Harnessing the Potential of Samsung Aquabolt-XL HBM2-PIM on FPGAs</b><br>
+              <b>Jinwoo Choi<small><sup>1</sup></small></b>, Yeonan Ha<small><sup>1</sup></small>, Hanna Cha, Seil Lee, Sungchul Lee, Jounghoo Lee, Shin-haeng Kang, Bongjun Kim, Hanwoong Jung, Hanjun Kim and Youngsok Kim<br>
+              <i>32nd IEEE International Symposium On Field-Programmable Custom Computing Machines (<b>FCCM</b>), May. 2024 (to appear)</i> <br>
+              <small><sup>1</sup>Co-first authors</small><br>
+              <span class="label label-fpga">FPGA</span> <span class="label label-pim">PIM</span> <span class="label label-arch">Architecture</span>
+            </li>
+            <br>
+            <li>
               <b><a href="https://doi.org/10.1109/TC.2023.3299030">Enabling Fine-Grained Spatial Multitasking on Systolic-Array NPUs Using Dataflow Mirroring</a></b><br>
               <b>Jinwoo Choi</b>, Yeonan Ha, Jounghoo Lee, Sangsu Lee, Jinho Lee, Hanhwi Jang, and Youngsok Kim<br>
               <i>IEEE Transactions on Computers (<b>TC</b>), Aug. 2023</i> <br>
@@ -119,6 +127,16 @@
               <span class="label label-ai">AI</span>
             </li>
           </ul>
+
+        <h1> Awards </h1>
+        <ul>
+          <li>
+            July 2023. <a href="https://www.yonsei.ac.kr/ocx/news.jsp?mode=view&ar_seq=20240126141228753087&sr_volume=635&list_mode=list&sr_site=S&pager.offset=27">2023-2학기 대학원 혁신 우수논문 Award</a> (최우수상 from College of Computing)
+          </li>
+          <li>
+            May 2022. A recipient of <a href="https://www.nrf.re.kr/biz/info/info/view?menu_no=378&biz_no=416">NRF 박사과정생 연구장려금지원 program</a>.
+          </li>
+        </ul>
 
         <h1>Contact</h1>
         <ul>
