--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -92,7 +92,7 @@
               <b>Jinwoo Choi<small><sup>1</sup></small></b>, Yeonan Ha<small><sup>1</sup></small>, Hanna Cha, Seil Lee, Sungchul Lee, Jounghoo Lee, Shin-haeng Kang, Bongjun Kim, Hanwoong Jung, Hanjun Kim and Youngsok Kim<br>
               <i>32nd IEEE International Symposium On Field-Programmable Custom Computing Machines (<b>FCCM</b>), May. 2024 (to appear)</i> <br>
               <small><sup>1</sup>Co-first authors</small><br>
-              <span class="label label-fpga">FPGA</span> <span class="label label-pim">PIM</span> <span class="label label-arch">Architecture</span>
+              <span class="label label-arch">Architecture</span> <span class="label label-fpga">FPGA</span> <span class="label label-pim">PIM</span>
             </li>
             <br>
             <li>
