--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -59,12 +59,26 @@
 
   <body>
     <div class="container">
-      <div>
+      <table>
+        <tr>
+          <td align="middle">
+            <img src="./Profile.jpg" width="100px">
+          </td>
+          <td valign="top" style="padding-left: 1em;">
+            <h1>Jinwoo Choi</h1>
+            <h4>HPCP Lab @ Yonsei University</h4>
+          </td>
+        </tr>
+      </table>
+      <!-- <div>
+          <div>
+            <img src="./Profile.jpg" width="100px">
+          </div>
           <div>
             <h1>Jinwoo Choi</h1>
             <h4>HPCP Lab @ Yonsei University</h4>
           </div>
-      </div>
+      </div> -->
     </div>
 
     <hr>
@@ -72,21 +86,24 @@
     <div class="container">
       <!-- <div id="content"> -->
         <h1>Introduce</h1>
+        I am currently an PhD. Candidate in the Department of Computer Science at Yonsei University under the supervision of Prof. Youngsok Kim.
+        I received the BS degree in computer science, Yonsei University, Seoul, South Korea, in 2020. My current research interests include computer system/architecture, mobile/embedded system, and system/architecture for neural networks.
           <ul>
             <li>Ph.D Student at <a href="https://hpcp.yonsei.ac.kr">HPCP Lab @ Yonsei University</a></li>
             <li>Advisor: <a href="https://hpcp.yonsei.ac.kr/~youngsok/">Prof. Youngsok Kim</a></li>
+            <li>Email: <a href="mailto:jinwoo1029@yonsei.ac.kr">jinwoo1029@yonsei.ac.kr</a><br></li>
           </ul>
 
         <h1>Research Interests</h1>
           <ul>
             <li>Computer System / Architecture</li>
             <li>Mobile / Embedded System</li>
+            <li>System/Architecture Optimization for Neuroal Netowrks</li>
             <li>Scheduling</li>
-            <li>Operating System</li>
           </ul>
 
         <h1>Publications</h1>
-          <ul>
+          <ol>
             <li>
               <b>MPC-Wrapper: Fully Harnessing the Potential of Samsung Aquabolt-XL HBM2-PIM on FPGAs</b><br>
               <b>Jinwoo Choi<small><sup>1</sup></small></b>, Yeonan Ha<small><sup>1</sup></small>, Hanna Cha, Seil Lee, Sungchul Lee, Jounghoo Lee, Shin-haeng Kang, Bongjun Kim, Hanwoong Jung, Hanjun Kim and Youngsok Kim<br>
@@ -126,7 +143,7 @@
               <span class="label label-arch">Architecture</span>
               <span class="label label-ai">AI</span>
             </li>
-          </ul>
+          </ol>
 
         <h1> Awards </h1>
         <ul>
@@ -138,10 +155,25 @@
           </li>
         </ul>
 
-        <h1>Contact</h1>
+        <h1>Project</h1>
         <ul>
           <li>
-            Email: <a href="mailto:jinwoo1029@yonsei.ac.kr">jinwoo1029@yonsei.ac.kr</a><br>
+            Searching Quality-Aware NN Scheduler, <i> LG Electronics </i>
+          </li>
+          <li>
+            Designing a PIM-Based NPU Architecture and FPGA Prototyping, <i> Samsung Advanced Institute of Technology (SAIT) </i>
+          </li>
+          <li>
+            Sparsity-Aware Spatial Multitasking NPU Architecture and Scheduling, <i> National Research Foundation of Korea (NRF) </i>
+          </li>
+          <li>
+            Developing Software Platform for Programming of PIM,  <i> Institute for Information & communcations Technology Promotion (IITP) </i>
+          </li>
+          <li>
+            Smart, Attack-resistant IoT Networks, <i> Korea Institute for Advancement of Technology (KIAT) </i>
+          </li>
+          <li>
+            Spatial Multitasking on Systolic Array Neural Processing Units, <i> Samsung Advanced Institute of Technology (SAIT) </i>
           </li>
         </ul>
       <!-- </div> -->
