--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -62,7 +62,7 @@
       <table>
         <tr>
           <td align="middle">
-            <img src="./Profile.jpg" width="100px">
+            <img src="/_layouts/Profile.jpg" width="100px">
           </td>
           <td valign="top" style="padding-left: 1em;">
             <h1>Jinwoo Choi</h1>
