--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -62,9 +62,9 @@
       <table>
         <tr>
           <td align="middle">
-            <img src="/images/Profile.jpg" width="100px">
+            <img src="/images/Profile.jpg" width=120>
           </td>
-          <td valign="top" style="padding-left: 1em;">
+          <td valign="bottom" style="padding-left: 1em;">
             <h1>Jinwoo Choi</h1>
             <h4>HPCP Lab @ Yonsei University</h4>
           </td>
@@ -86,10 +86,10 @@
     <div class="container">
       <!-- <div id="content"> -->
         <h1>Introduce</h1>
-        I am currently an PhD. Candidate in the Department of Computer Science at Yonsei University under the supervision of Prof. Youngsok Kim.
+        I am currently an Ph.D Candidate in the Department of Computer Science at Yonsei University under the supervision of Prof. Youngsok Kim.
         I received the BS degree in computer science, Yonsei University, Seoul, South Korea, in 2020. My current research interests include computer system/architecture, mobile/embedded system, and system/architecture for neural networks.
           <ul>
-            <li>Ph.D Student at <a href="https://hpcp.yonsei.ac.kr">HPCP Lab @ Yonsei University</a></li>
+            <li>Ph.D Candidate at <a href="https://hpcp.yonsei.ac.kr">HPCP Lab @ Yonsei University</a></li>
             <li>Advisor: <a href="https://hpcp.yonsei.ac.kr/~youngsok/">Prof. Youngsok Kim</a></li>
             <li>Email: <a href="mailto:jinwoo1029@yonsei.ac.kr">jinwoo1029@yonsei.ac.kr</a><br></li>
           </ul>
@@ -98,7 +98,7 @@
           <ul>
             <li>Computer System / Architecture</li>
             <li>Mobile / Embedded System</li>
-            <li>System/Architecture Optimization for Neuroal Netowrks</li>
+            <li>System/Architecture Optimization for Neuroal Networks</li>
             <li>Scheduling</li>
           </ul>
 
