--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -105,6 +105,13 @@
         <h1>Publications</h1>
           <ol>
             <li>
+              <b>SPID-Join: A Skew-resistant Processing-in-DIMM Join Algorithm Exploiting the Bank- and Rank-level Parallelisms of DIMMs</b> <br>
+              Suhyun Lee, Chaemin Lim, <b>Jinwoo Choi</b>, Heelim Choi, Chan Lee, Yongjun Park, Kwanghyun Park, Hanjun Kim, and Youngsok Kim <br>
+              <i>2025 ACM International Conference on Management of Data (<b>SIGMOD</b>), June 2025 (to appear)</i> <br>
+              <span class="label label-sys">System SW</span> <span class="label label-pim">PIM</span> <span class="label label-database">Database</span>
+            </li>
+            <br>
+            <li>
               <b>MPC-Wrapper: Fully Harnessing the Potential of Samsung Aquabolt-XL HBM2-PIM on FPGAs</b><br>
               <b>Jinwoo Choi<small><sup>1</sup></small></b>, Yeonan Ha<small><sup>1</sup></small>, Hanna Cha, Seil Lee, Sungchul Lee, Jounghoo Lee, Shin-haeng Kang, Bongjun Kim, Hanwoong Jung, Hanjun Kim and Youngsok Kim<br>
               <i>32nd IEEE International Symposium On Field-Programmable Custom Computing Machines (<b>FCCM</b>), May. 2024 (to appear)</i> <br>
@@ -123,7 +130,7 @@
               <b><a href="https://doi.org/10.1145/3589258">Design and Analysis of a Processing-in-DIMM Join Algorithm: A Case Study with UPMEM DIMMs</a></b><br>
               Chaemin Lim, Suhyun Lee, <b>Jinwoo Choi</b>, Jounghoo Lee, Seongyeon Park, Hanjun Kim, Jinho Lee, and Youngsok Kim<br>
               <i>2023 ACM SIGMOD International Conference on Management of Data (<b>SIGMOD</b>), June 2023</i> <br>
-              <span class="label label-sys">System SW</span> <span class="label label-database">Database</span> <span class="label label-pim">PIM</span>
+              <span class="label label-sys">System SW</span> <span class="label label-pim">PIM</span> <span class="label label-database">Database</span>
             </li>
             <br>
             <li>
