[UPDATE] introduce, teaching

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -87,7 +87,7 @@
       <!-- <div id="content"> -->
         <h1>Introduce</h1>
         I am currently an Ph.D Candidate in the Department of Computer Science at Yonsei University under the supervision of Prof. Youngsok Kim.
-        I received the BS degree in computer science, Yonsei University, Seoul, South Korea, in 2020. My current research interests include computer system/architecture, mobile/embedded system, and system/architecture for neural networks.
+        I received the BS degree in computer science, Yonsei University, Seoul, South Korea, in 2020. My current research interests include computer system/architecture, mobile/embedded system, and system & architecture optimization for neural networks.
           <ul>
             <li>Ph.D Candidate at <a href="https://hpcp.yonsei.ac.kr">HPCP Lab @ Yonsei University</a></li>
             <li>Advisor: <a href="https://hpcp.yonsei.ac.kr/~youngsok/">Prof. Youngsok Kim</a></li>
@@ -96,9 +96,9 @@
 
         <h1>Research Interests</h1>
           <ul>
-            <li>Computer System / Architecture</li>
+            <li>System & Architecture Optimization for Neuroal Networks</li>
             <li>Mobile / Embedded System</li>
-            <li>System/Architecture Optimization for Neuroal Networks</li>
+            <li>Computer System / Architecture</li>
             <li>Scheduling</li>
           </ul>
 
@@ -112,9 +112,9 @@
             </li>
             <br>
             <li>
-              <b>MPC-Wrapper: Fully Harnessing the Potential of Samsung Aquabolt-XL HBM2-PIM on FPGAs</b><br>
+              <b><a href="https://hpcp.yonsei.ac.kr/~youngsok/files/mpc-wrapper_fccm2024.pdf">MPC-Wrapper: Fully Harnessing the Potential of Samsung Aquabolt-XL HBM2-PIM on FPGAs</a></b><br>
               <b>Jinwoo Choi<small><sup>1</sup></small></b>, Yeonan Ha<small><sup>1</sup></small>, Hanna Cha, Seil Lee, Sungchul Lee, Jounghoo Lee, Shin-haeng Kang, Bongjun Kim, Hanwoong Jung, Hanjun Kim and Youngsok Kim<br>
-              <i>32nd IEEE International Symposium On Field-Programmable Custom Computing Machines (<b>FCCM</b>), May. 2024 (to appear)</i> <br>
+              <i>32nd IEEE International Symposium On Field-Programmable Custom Computing Machines (<b>FCCM</b>), May. 2024</i> <br>
               <small><sup>1</sup>Co-first authors</small><br>
               <span class="label label-arch">Architecture</span> <span class="label label-fpga">FPGA</span> <span class="label label-pim">PIM</span>
             </li>
@@ -181,6 +181,25 @@
           </li>
           <li>
             Spatial Multitasking on Systolic Array Neural Processing Units, <i> Samsung Advanced Institute of Technology (SAIT) </i>
+          </li>
+        </ul>
+
+        <h1>Teaching</h1>
+        <ul>
+          <li>
+            Computer Architecture <small>(2021S, 2020S)</small>
+          </li>
+          <li>
+            Compiler Design <small>(2020F)</small>
+          </li>
+          <li>
+            Opensource Project <small>(2021F)</small>
+          </li>
+          <li>
+            Software Capstone Design <small>(2022S)</small>
+          </li>
+          <li>
+            Discrete Mathmatics <small>(2022F)</small>
           </li>
         </ul>
       <!-- </div> -->
