fit minor error

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -92,7 +92,7 @@
             <li>Ph.D Candidate at <a href="https://hpcp.yonsei.ac.kr">HPCP Lab @ Yonsei University</a></li>
             <li>Advisor: <a href="https://hpcp.yonsei.ac.kr/~youngsok/">Prof. Youngsok Kim</a></li>
             <li>Email: <a href="mailto:jinwoo1029@yonsei.ac.kr">jinwoo1029@yonsei.ac.kr</a><br></li>
-            <li><a href="www.linkedin.com/in/jinwoo-choi-a0a916264">Linkedin</a><br></li>
+            <li><a href="https://www.linkedin.com/in/jinwoo-choi-a0a916264">Linkedin</a><br></li>
           </ul>
 
         <h1>Research Interests</h1>
