[UPDATE] fccm 2024 link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -113,7 +113,7 @@
             </li>
             <br>
             <li>
-              <b><a href="https://hpcp.yonsei.ac.kr/~youngsok/files/mpc-wrapper_fccm2024.pdf">MPC-Wrapper: Fully Harnessing the Potential of Samsung Aquabolt-XL HBM2-PIM on FPGAs</a></b><br>
+              <b><a href="https://ieeexplore.ieee.org/document/10653651">MPC-Wrapper: Fully Harnessing the Potential of Samsung Aquabolt-XL HBM2-PIM on FPGAs</a></b><br>
               <b>Jinwoo Choi<small><sup>1</sup></small></b>, Yeonan Ha<small><sup>1</sup></small>, Hanna Cha, Seil Lee, Sungchul Lee, Jounghoo Lee, Shin-haeng Kang, Bongjun Kim, Hanwoong Jung, Hanjun Kim and Youngsok Kim<br>
               <i>32nd IEEE International Symposium On Field-Programmable Custom Computing Machines (<b>FCCM</b>), May. 2024</i> <br>
               <small><sup>1</sup>Co-first authors</small><br>
