--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -106,9 +106,9 @@
         <h1>Publications</h1>
           <ol>
             <li>
-              <b>SPID-Join: A Skew-resistant Processing-in-DIMM Join Algorithm Exploiting the Bank- and Rank-level Parallelisms of DIMMs</b> <br>
+              <b><a href="https://doi.org/10.1145/3698827">SPID-Join: A Skew-resistant Processing-in-DIMM Join Algorithm Exploiting the Bank- and Rank-level Parallelisms of DIMMs</a></b> <br>
               Suhyun Lee, Chaemin Lim, <b>Jinwoo Choi</b>, Heelim Choi, Chan Lee, Yongjun Park, Kwanghyun Park, Hanjun Kim, and Youngsok Kim <br>
-              <i>2025 ACM International Conference on Management of Data (<b>SIGMOD</b>), June 2025 (to appear)</i> <br>
+              <i>2025 ACM International Conference on Management of Data (<b>SIGMOD</b>), June 2025</i> <br>
               <span class="label label-sys">System SW</span> <span class="label label-pim">PIM</span> <span class="label label-database">Database</span>
             </li>
             <br>
