--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -185,6 +185,14 @@
           </li>
         </ul>
 
+        <h1>Patent</h1>
+        <ul>
+          <li>
+            Artifical Intelligence Device Based on Trust Environment (JP Patent App. 2023-129058) <br>
+            Youngsok Kim, <b>Jinwoo Choi</b>, Chaemin Lim, Suhyun Lee, Dokyung Song, Jinho Lee
+          </li>
+        </ul>
+
         <h1>Teaching</h1>
         <ul>
           <li>
