--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -93,14 +93,16 @@
             <li>Advisor: <a href="https://hpcp.yonsei.ac.kr/~youngsok/">Prof. Youngsok Kim</a></li>
             <li>Email: <a href="mailto:jinwoo1029@yonsei.ac.kr">jinwoo1029@yonsei.ac.kr</a><br></li>
             <li><a href="https://www.linkedin.com/in/jinwoo-choi-a0a916264">Linkedin</a><br></li>
+            <li><a href="/images/CV.pdf">CV</a><br></li>
           </ul>
 
         <h1>Research Interests</h1>
           <ul>
-            <li>System & Architecture Optimization for Neuroal Networks</li>
+            <li>System & Architecture Optimization for Neural Networks</li>
             <li>Mobile / Embedded System</li>
-            <li>Computer System / Architecture</li>
+            <!-- <li>Computer System / Architecture</li> -->
             <li>Scheduling</li>
+            <li>Neural Processing Unit (NPU)</li>
           </ul>
 
         <h1>Publications</h1>
@@ -153,6 +155,14 @@
             </li>
           </ol>
 
+          <h1>Patent</h1>
+          <ul>
+            <li>
+              Artificial Intelligence Device Based on Trust Environment (JP Patent App. 2023-129058) <br>
+              Youngsok Kim, <b>Jinwoo Choi</b>, Chaemin Lim, Suhyun Lee, Dokyung Song, Jinho Lee
+            </li>
+          </ul>
+  
         <h1> Awards </h1>
         <ul>
           <li>
@@ -160,14 +170,6 @@
           </li>
           <li>
             May 2022. A recipient of <a href="https://www.nrf.re.kr/biz/info/info/view?menu_no=378&biz_no=416">NRF 박사과정생 연구장려금지원 program</a>.
-          </li>
-        </ul>
-
-        <h1>Patent</h1>
-        <ul>
-          <li>
-            Artifical Intelligence Device Based on Trust Environment (JP Patent App. 2023-129058) <br>
-            Youngsok Kim, <b>Jinwoo Choi</b>, Chaemin Lim, Suhyun Lee, Dokyung Song, Jinho Lee
           </li>
         </ul>
 
